update with different method

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,14 @@
 name = "lessonbruce"
 version = "0.1.0"
 description = ""
-authors = ["Michkail <55208634+Michkail@users.noreply.github.com>"]
+authors = ["Michkail <michkail@pm.me>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
 scapy = "^2.5.0"
 pbkdf2 = "^1.3"
+requests = "^2.31.0"
 
 
 [build-system]
