--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.10"
 scapy = "^2.5.0"
 pbkdf2 = "^1.3"
 requests = "^2.31.0"
+validate-email = "^1.3"
+colored = "^2.2.2"
+paramiko = "^3.2.0"
+pywifi = "^1.1.12"
 
 
 [build-system]
